[gd_scene load_steps=8 format=3 uid="uid://cmoo5pu42iqkw"]

[ext_resource type="Script" path="res://weapons/flame/flame.gd" id="1_dr280"]
[ext_resource type="Texture2D" uid="uid://byedyerr1qtk" path="res://weapons/flame/flame.png" id="2_b5ify"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qesu0"]
radius = 460.184

[sub_resource type="Animation" id="Animation_udgv7"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1.8025, 0.574349, 1.86607, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.925, 1), Vector2(1, 1.1), Vector2(0.885, 0.83), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fefq3"]
_data = {
"idle": SubResource("Animation_udgv7")
}

[sub_resource type="Gradient" id="Gradient_tt7n2"]
offsets = PackedFloat32Array(0.187166, 0.411765, 0.647059)
colors = PackedColorArray(1, 1, 1, 1, 0.999473, 0.592143, 0.195482, 0.439655, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vmleb"]
gradient = SubResource("Gradient_tt7n2")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Flame" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_dr280")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qesu0")

[node name="Flame" type="Sprite2D" parent="."]
position = Vector2(93, -8)
texture = ExtResource("2_b5ify")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flame"]
libraries = {
"": SubResource("AnimationLibrary_fefq3")
}
autoplay = "idle"

[node name="WeaponPivot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(96, 1)

[node name="PointLight2D" type="PointLight2D" parent="WeaponPivot/ShootingPoint"]
position = Vector2(1.78814e-07, -9)
scale = Vector2(1.4375, 1.53125)
range_layer_min = -1
texture = SubResource("GradientTexture2D_vmleb")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.34
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -1
offset_left = -219.0
offset_top = -362.0
offset_right = 619.0
offset_bottom = 386.0
color = Color(0.368627, 0.368627, 0.368627, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
